# rs-web

./: .env  Cargo.toml  README.md
webservice/: Cargo.toml
webservice/src/: error.rs  routers.rs  state.rs
webservice/src/db_access/: course.rs
webservice/src/dbaccess/: course.rs
webservice/src/handlers/: course.rs  general.rs
webservice/src/models/: course.rs
